Horizon Home Menu - Last items

--- a/school_management/views/ir_ui_menu.xml
+++ b/school_management/views/ir_ui_menu.xml
@@ -81,23 +81,29 @@ Copyright 2024 Neodiensis
 
         <!-- ROOMS 10 - Online Booking dans WEBSITE_BOOKING -->
 
+        <!-- ROOMS 20 - Gestion des réservations dans SCHOOL_BOOKING -->
+
     <record id="school_home_menu_administration_admin" model="ir.ui.menu">
         <field name="name">Administration Horizon</field>
         <field name="parent_id" ref="school_home_menu_administration" />
-        <field name="sequence" eval="20" />
+        <field name="sequence" eval="10" />
         <field name="action" ref="action_year_list" />
         <field name="display_in_home_menu">True</field>
         <field name="simulated_id" ref="menu_year_list" />
     </record>
-    
+
     <record id="school_home_menu_administration_settings" model="ir.ui.menu">
         <field name="name">Paramètres Odoo</field>
         <field name="parent_id" ref="school_home_menu_administration" />
-        <field name="sequence" eval="40" />
+        <field name="sequence" eval="20" />
         <field name="action" ref="base_setup.action_general_configuration" />
         <field name="display_in_home_menu">True</field>
         <field name="simulated_id" ref="base_setup.menu_config" />
     </record>
+    
+        <!-- ADMIN 30 - Paramètres du site Web dans WEBSITE_SCHOOL_MANAGEMENT -->
+
+        <!-- ADMIN 40 - Paramètres des formulaires dans SCHOOL_REGISTRATION -->
 
     <!-- Sélection des menus de l'écran d'accueil -->
     <record id="edit_menu_access_school" model="ir.ui.view">
