--- a/school_booking/views/ir_ui_menu.xml
+++ b/school_booking/views/ir_ui_menu.xml
@@ -6,13 +6,12 @@ Copyright 2024 Neodiensis
 
 <odoo>
     <!-- Horizon Home Menu - Niveau 2 -->
-    <record id="school_home_menu_rooms_online" model="ir.ui.menu">
-        <field name="name">Online Booking</field>
+    <record id="school_home_menu_rooms_booking" model="ir.ui.menu">
+        <field name="name">Gestion des réservations</field>
         <field name="parent_id" ref="school_management.school_home_menu_rooms" />
-        <field name="sequence" eval="10" />
-        <field name="action" ref="action_website_booking" />
+        <field name="sequence" eval="20" />
+        <field name="action" ref="action_booking_tree" />
         <field name="display_in_home_menu">True</field>
-        <field name="simulated_id" ref="menu_school_booking" />
+        <field name="simulated_id" ref="menu_booking_booking_tree" />
     </record>
-
 </odoo>
