--- a/school_evaluations/views/evaluation_view.xml
+++ b/school_evaluations/views/evaluation_view.xml
@@ -936,7 +936,7 @@
           <field name="res_model">school.individual_course</field>
 
           <field name="view_mode">tree,form</field>
-          <field name="context">{"search_default_my_current_courses":1}</field>
+          <field name="context">{"search_default_my_current_courses":1, "search_default_active":1}</field>
           <field
             name="search_view_id"
             ref="school_management.view_individual_courses_filter"
@@ -980,6 +980,24 @@
                         '|',('first_session_result', '=', 0), ('first_session_result', '=', None),
                         '|',('second_session_result', '=', 0), ('second_session_result', '=', None)
                 ]"
+            />
+                <separator />
+            </xpath>
+        </field>
+    </record>
+
+    <record id="view_individual_course_grades_filter" model="ir.ui.view">
+        <field name="name">school.individual_course.grades.filter</field>
+        <field name="model">school.individual_course</field>
+        <field name="inherit_id" ref="school_management.view_individual_courses_filter"
+        />
+        <field eval="25" name="priority" />
+        <field name="arch" type="xml">
+            <xpath expr="//filter[@name='active']" position="after">
+                <filter
+                name="has_no_grades"
+                string="Pas de notes encodées"
+                domain="['&amp;',('partial_result', '=', None),('final_result', '=', None),('second_result', '=', None)]"
             />
                 <separator />
             </xpath>
