--- a/school_valuations/views/valuations_view.xml
+++ b/school_valuations/views/valuations_view.xml
@@ -213,6 +213,10 @@
                     name="name"
                     filter_domain="['|',('name','ilike',self),('uid','ilike',self)]"
                 />
+          <field
+              name="uid"
+              filter_domain="[('uid','ilike',self)]"
+          />
           <field name="responsible_id" string="Responsible" />
           <field name="student_id" string="Student" />
           <filter
@@ -236,6 +240,13 @@
                     string="Mes valorisations"
                     domain="[('responsible_uid','=',uid),('state','!=','0_valuated'),('state','!=','3_rejected')]"
                 />
+          <group expand="1" string="Group By">
+              <filter
+                  string="Responsible"
+                  name="responsible_id"
+                  context="{'group_by':'responsible_id'}"
+              />
+          </group>
         </search>
       </field>
     </record>
