--- a/school_evaluations/report/report_evaluation.xml
+++ b/school_evaluations/report/report_evaluation.xml
@@ -789,7 +789,7 @@
                                         CODE UE
                                     </th>
                                     <th>
-                                        UNITéS D'ENSEIGNEMENT
+                                        UNITÉS D'ENSEIGNEMENT
                                     </th>
                                     <th class="center">
                                         HEURES
