Reorganizing filters + possibility to search on partner ID

--- a/school_management/views/res_partner_view.xml
+++ b/school_management/views/res_partner_view.xml
@@ -559,6 +559,9 @@
                     string="Tag"
                     filter_domain="[('category_id','ilike', self)]"
                 />
+                <field
+                    name="id"
+                />
                 </search>
             </field>
         </record>
