--- a/school_evaluations/views/evaluation_view.xml
+++ b/school_evaluations/views/evaluation_view.xml
@@ -90,7 +90,7 @@
             </field>
         </record>
 
-        <record id="view_individual_program_eval_filter" model="ir.ui.view">
+        <!-- <record id="view_individual_program_eval_filter" model="ir.ui.view">
             <field name="name">school.individual_program.eval.filter</field>
             <field name="model">school.individual_program</field>
             <field
@@ -110,7 +110,7 @@
                     <separator />
                 </xpath>
             </field>
-        </record>
+        </record> -->
 
         <!-- Add evaluation to Individual Program form view -->
         <record id="individual_program_eval_form" model="ir.ui.view">
