--- a/school_management/views/individual_program_view.xml
+++ b/school_management/views/individual_program_view.xml
@@ -555,7 +555,7 @@
                 />
                 <filter
                     name="active"
-                    string="Active"
+                    string="En cours"
                     domain="[('bloc_id.state','!=','abandoned')]"
                 />
                 <group expand="1" string="Group By">
